Clean-up of the StorageMap code